Added new exercise

--- a/CodingPractice_10-09-18.ipynb
+++ b/CodingPractice_10-09-18.ipynb
@@ -22,11 +22,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "## Write your script here"
+    "## Write your script here\n"
    ]
   },
   {
@@ -44,9 +44,13 @@
    "outputs": [],
    "source": [
     "def makes10(a,b):\n",
-    "    \"\"\"\n",
-    "    Write your code here!\n",
-    "    \"\"\""
+    "    if a == 10:\n",
+    "        return(\"True\")\n",
+    "    elif b == 10:\n",
+    "        return(\"True\")\n",
+    "    elif a + b == 10:\n",
+    "        return(\"True\")\n",
+    "    "
    ]
   },
   {
@@ -83,7 +87,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "## Write your script here"
@@ -124,7 +130,7 @@
    "outputs": [],
    "source": [
     "def add(x,y):\n",
-    "    \"\"\"Your code here\"\"\"\n",
+    "    print(x+y)\n",
     "\n",
     "def subtract(x,y):\n",
     "    \"\"\"Your code here\"\"\"\n",
@@ -148,6 +154,58 @@
     "print(multiply(4,3))\n",
     "print(divide(7,4))\n",
     "print(divide(7,0))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 6. Import files and make graphs\n",
+    "Download the file called \"FavoriteNumbers.csv\" from the GitHub repository. These are the favorite numbers between 1 and 10 of everyone in #oceans_six. Remember how to load files using pandas? Recall that you can show the first few rows by using the .head() command.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "df = pd.read_csv(\"FavoriteNumbers.csv\")\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "Try to calculate the mean, median and standard deviation of this dataset. You may have to use numpy for this. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now, can you make a [histogram](https://en.wikipedia.org/wiki/Histogram) to show the most commonly picked numbers? You will have to import a new package, matplotlib.pyplot, to do this. This package has its own built-in bar graph function: try running matplotlib.pyplot.bar([list1], [list2]). List1 should contain the possible number options, and list2 should "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot as plt\n"
    ]
   }
  ],
