--- a/jupyter-notebooks/numpy_arrays_visualized_110818.ipynb
+++ b/jupyter-notebooks/numpy_arrays_visualized_110818.ipynb
@@ -38,8 +38,7 @@
     "       [31, 34, 37, 40, 43],\n",
     "       [46, 49, 52, 55, 58]])` \n",
     "\n",
-    "![image](https://raw.githubusercontent.com/katyabbott/BridgeUP-STEM-Oceans-Six/master/photos/Screen%20Shot%202018-11-02%20at%205.23.03%20PM.png?token=AmUbDjQ-T25rf3qNJeLMqHZmzsdnkFljks5b5gjywA%3D%3D)\n",
-    "\n"
+    "![image](https://raw.githubusercontent.com/amnh/BridgeUP-STEM-Oceans-Six/master/photos/Screen%20Shot%202018-11-02%20at%205.23.03%20PM.png?token=AmUbDpWjSe4asRuC415N-d381PDnMuTAks5b7ahPwA%3D%3D)\n"
    ]
   },
   {
@@ -64,7 +63,7 @@
    "source": [
     "It can help to think of your selection as an intersection of indices.\n",
     "\n",
-    "![image](https://raw.githubusercontent.com/katyabbott/BridgeUP-STEM-Oceans-Six/master/photos/Screen%20Shot%202018-11-02%20at%205.40.45%20PM.png?token=AmUbDu0CvC6k9S0EZUEkyfzSCSchcLoCks5b5g0lwA%3D%3D)"
+    "![image](https://raw.githubusercontent.com/amnh/BridgeUP-STEM-Oceans-Six/master/photos/Screen%20Shot%202018-11-02%20at%205.40.45%20PM.png?token=AmUbDh80CPWOXWsxehydto2v0jYHJcWGks5b7ah5wA%3D%3D)"
    ]
   },
   {
@@ -87,7 +86,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![image](https://raw.githubusercontent.com/katyabbott/BridgeUP-STEM-Oceans-Six/master/photos/firstrow.png?token=AmUbDtFQ-Zb9E3t6yFzDMbNWHnJ7UT89ks5b5g7ZwA%3D%3D)"
+    "![image](https://raw.githubusercontent.com/amnh/BridgeUP-STEM-Oceans-Six/master/photos/firstrow.png?token=AmUbDqPS-gD5MuRbGX9qog99B0RbkvFMks5b7aiNwA%3D%3D)"
    ]
   },
   {
@@ -110,7 +109,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![image](https://raw.githubusercontent.com/katyabbott/BridgeUP-STEM-Oceans-Six/master/photos/middlecolumn.png?token=AmUbDsqvK5YKRz3Eg76WpyA3rdv8wEO3ks5b5hEewA%3D%3D)"
+    "![image](https://raw.githubusercontent.com/amnh/BridgeUP-STEM-Oceans-Six/master/photos/lastcolumn.png?token=AmUbDsXOpKqJbn9QlEKgnIcbXtXsaoUAks5b7aibwA%3D%3D)"
    ]
   },
   {
@@ -173,7 +172,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![image](https://raw.githubusercontent.com/katyabbott/BridgeUP-STEM-Oceans-Six/master/photos/partofcolumn.png?token=AmUbDgkajd3VG3s8K7PmL1J3qcTxASxKks5b5hOWwA%3D%3D)"
+    "![image](https://raw.githubusercontent.com/amnh/BridgeUP-STEM-Oceans-Six/master/photos/partofcolumn.png?token=AmUbDuIihl2TPdYe2k_HE-ytjShglXQ3ks5b7aiswA%3D%3D)"
    ]
   },
   {
@@ -204,7 +203,7 @@
     "        [46, 49, 52, 55, 58]]])\n",
     "        \n",
     "Graphically, it looks like this. \n",
-    "![image](https://raw.githubusercontent.com/katyabbott/BridgeUP-STEM-Oceans-Six/master/photos/Screen%20Shot%202018-11-02%20at%206.14.07%20PM.png?token=AmUbDm9faLdtO0-1w5HdHjhtWVhPoUDOks5b5hafwA%3D%3D)\n",
+    "![image](https://raw.githubusercontent.com/amnh/BridgeUP-STEM-Oceans-Six/master/photos/Screen%20Shot%202018-11-02%20at%206.14.07%20PM.png?token=AmUbDrtNU8p2FFYj4UNlh7hBvBuiEt0bks5b7ajGwA%3D%3D)\n",
     "The array has 2 groups, which each have two rows and 5 columns.\n",
     "\n",
     "Suppose we want to select the values 31 and 46. What is the intersection that produces these values?"
@@ -223,7 +222,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![image](https://raw.githubusercontent.com/katyabbott/BridgeUP-STEM-Oceans-Six/master/photos/Screen%20Shot%202018-11-02%20at%206.21.08%20PM.png?token=AmUbDgRhgeVZZpUBQaDaKTYhYK3bTYN7ks5b5hbKwA%3D%3D)"
+    "![image](https://raw.githubusercontent.com/amnh/BridgeUP-STEM-Oceans-Six/master/photos/Screen%20Shot%202018-11-02%20at%206.21.08%20PM.png?token=AmUbDmk8JrWSOYRqc2SlBxQsn7RpJKkxks5b7ajbwA%3D%3D)"
    ]
   },
   {
@@ -267,7 +266,7 @@
    "metadata": {},
    "source": [
     "In table form, this array looks like this: \n",
-    "![image](https://raw.githubusercontent.com/katyabbott/BridgeUP-STEM-Oceans-Six/master/photos/Screen%20Shot%202018-11-07%20at%2011.28.01%20AM.png?token=AmUbDsZHg5EHq9S5uxfrb1KSySyaY5OGks5b7E2XwA%3D%3D)"
+    "![image](https://raw.githubusercontent.com/amnh/BridgeUP-STEM-Oceans-Six/master/photos/Screen%20Shot%202018-11-07%20at%2011.28.01%20AM.png?token=AmUbDkvrUr9WOl3dMf3WN4OD_tu96Yeiks5b7ajvwA%3D%3D)"
    ]
   },
   {
