--- a/jupyter-notebooks/CodingPractice_10-09-18.ipynb
+++ b/jupyter-notebooks/CodingPractice_10-09-18.ipynb
@@ -17,7 +17,7 @@
    "metadata": {},
    "source": [
     "### 1. AboutMe\n",
-    "Write a script that prints your name and your favorite animal, using assignments."
+    "Write a script that prints your name and your favorite animal, using assignments (Throw in change here)."
    ]
   },
   {
