--- a/jupyter-notebooks/CodingPractice_10-09-18.ipynb
+++ b/jupyter-notebooks/CodingPractice_10-09-18.ipynb
@@ -26,7 +26,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "## Write your script here\n"
+    "## Write your script here\n",
+    "s = \"I'm adding an error :/\""
    ]
   },
   {
