--- a/jupyter-notebooks/CodingPractice_10-09-18.ipynb
+++ b/jupyter-notebooks/CodingPractice_10-09-18.ipynb
@@ -26,7 +26,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "## Write your script here\n",
+    "## Write your script here -  \"Making an incompatible error?\"\n",
     "s = \"I'm adding an error :/\""
    ]
   },
