--- a/jupyter-notebooks/List_Comprehensions_and_Datsets_101818.ipynb
+++ b/jupyter-notebooks/List_Comprehensions_and_Datsets_101818.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,14 +36,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4]\n",
+      "[1, 2, 1, 4]\n",
+      "b changes!\n"
+     ]
+    }
+   ],
    "source": [
     "b = a  #I create a new list, b, that is equal to a.\n",
     "print(b)\n",
     "a[2] = 1 #I replace the third element of a with the value 1. Note that I am not changing the values of b\n",
-    "print(b) #What happens to b?"
+    " #What happens to b?\n",
+    "print(\"b changes!\")"
    ]
   },
   {
