--- a/jupyter-notebooks/List_Comprehensions_and_Datsets_101818.ipynb
+++ b/jupyter-notebooks/List_Comprehensions_and_Datsets_101818.ipynb
@@ -53,8 +53,7 @@
     "b = a  #I create a new list, b, that is equal to a.\n",
     "print(b)\n",
     "a[2] = 1 #I replace the third element of a with the value 1. Note that I am not changing the values of b\n",
-    " #What happens to b?\n",
-    "print(\"b changes!\")"
+    "print(b) #What happens to b?"
    ]
   },
   {
