--- a/jupyter-notebooks/List_Comprehensions_and_Datsets_101818.ipynb
+++ b/jupyter-notebooks/List_Comprehensions_and_Datsets_101818.ipynb
@@ -15,7 +15,9 @@
     "## What are list comprehensions?\n",
     "List comprehensions are a way to create new lists quickly in Python, with only one line of code.\n",
     "\n",
-    "Imagine I have a list, a, with the numbers 1 through 4. "
+    "Imagine I have a list, a, with the numbers 1 through 4. \n",
+    "\n",
+    "More testing."
    ]
   },
   {
