--- a/jupyter-notebooks/test_folder/netCDF_practice.ipynb
+++ b/jupyter-notebooks/test_folder/netCDF_practice.ipynb
@@ -79,7 +79,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(dataset.title)\n",
+    "print(dataset.history)\n",
     "print(dataset.contact)\n",
     "print(dataset.experiment_id)"
    ]
