--- a/jupyter-notebooks/netCDF_practice.ipynb
+++ b/jupyter-notebooks/netCDF_practice.ipynb
@@ -29,20 +29,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "from netCDF4 import Dataset #import Dataset from the netCDF4 package\n",
-    "dataset = Dataset('sea_surface_temp.nc', 'r')  #This opens the dataset as a read-only file (so no changes can be made)\n",
+    "dataset = Dataset(r'/Users/katyabbott/Documents/GitHub/BridgeUP-STEM-Oceans-Six/datasets/sea_surface_temp.nc', 'r')  #This opens the dataset as a read-only file (so no changes can be made)\n",
     "## The two netCDF extensions used are .nc and .cdf"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'netCDF4._netCDF4.Dataset'>\n",
+      "root group (NETCDF3_CLASSIC data model, file format NETCDF3):\n",
+      "    title: IPSL  model output prepared for IPCC Fourth Assessment SRES A2 experiment\n",
+      "    institution: IPSL (Institut Pierre Simon Laplace, Paris, France)\n",
+      "    source: IPSL-CM4_v1 (2003) : atmosphere : LMDZ (IPSL-CM4_IPCC, 96x71x19) ; ocean ORCA2 (ipsl_cm4_v1_8, 2x2L31); sea ice LIM (ipsl_cm4_v\n",
+      "    contact: Sebastien Denvil, sebastien.denvil@ipsl.jussieu.fr\n",
+      "    project_id: IPCC Fourth Assessment\n",
+      "    table_id: Table O1 (13 November 2004)\n",
+      "    experiment_id: SRES A2 experiment\n",
+      "    realization: 1\n",
+      "    cmor_version: 0.96\n",
+      "    Conventions: CF-1.0\n",
+      "    history: YYYY/MM/JJ: data generated; YYYY/MM/JJ+1 data transformed  At 16:37:23 on 01/11/2005, CMOR rewrote data to comply with CF standards and IPCC Fourth Assessment requirements\n",
+      "    references: Dufresne et al, Journal of Climate, 2015, vol XX, p 136\n",
+      "    comment: Test drive\n",
+      "    dimensions(sizes): lon(180), lat(170), time(24), bnds(2)\n",
+      "    variables(dimensions): float64 \u001b[4mlon\u001b[0m(lon), float64 \u001b[4mlon_bnds\u001b[0m(lon,bnds), float64 \u001b[4mlat\u001b[0m(lat), float64 \u001b[4mlat_bnds\u001b[0m(lat,bnds), float64 \u001b[4mtime\u001b[0m(time), float64 \u001b[4mtime_bnds\u001b[0m(time,bnds), float32 \u001b[4mtos\u001b[0m(time,lat,lon)\n",
+      "    groups: \n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "print(dataset) #What output do you see when you run this command?"
    ]
@@ -59,9 +85,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['title',\n",
+       " 'institution',\n",
+       " 'source',\n",
+       " 'contact',\n",
+       " 'project_id',\n",
+       " 'table_id',\n",
+       " 'experiment_id',\n",
+       " 'realization',\n",
+       " 'cmor_version',\n",
+       " 'Conventions',\n",
+       " 'history',\n",
+       " 'references',\n",
+       " 'comment']"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "dataset.ncattrs()\n"
    ]
@@ -75,11 +124,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sebastien Denvil, sebastien.denvil@ipsl.jussieu.fr\n",
+      "Sebastien Denvil, sebastien.denvil@ipsl.jussieu.fr\n",
+      "SRES A2 experiment\n"
+     ]
+    }
+   ],
    "source": [
-    "print(dataset.title)\n",
+    "print(dataset.contact)\n",
     "print(dataset.contact)\n",
     "print(dataset.experiment_id)"
    ]
@@ -151,11 +210,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'dataset' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-1-56b52a31fd11>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mdataset\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mvariables\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'tos'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'dataset' is not defined"
+     ]
+    }
+   ],
    "source": [
-    "dataset.variables['tos']"
+    "dataset.variables['tos']\n"
    ]
   },
   {
