--- a/jupyter-notebooks/netCDF_practice.ipynb
+++ b/jupyter-notebooks/netCDF_practice.ipynb
@@ -12,7 +12,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "What are netCDF files? The acronym stands for Network Common Data Form, and they're a way of formatting data that makes it easy for other scientists to share and read data on different computers, with different operating systems, with different software etc... without running into issues or struggling to understand someone else's work. \n",
+    "What are netCDF files? The acronym stands for Network Common Data Form, and they're a way of formatting data that makes it easy for other scientists to share and read data on different computers, with different operating systems, with different software etc... without running into issues or struggling to understand someone else's work! \n",
     "\n",
     "netCDF files are in what we call an array-oriented dataset. Data is stored in arrays, which are like grids, and can be accessed by selecting the appropriate row and column. Here's an example of a 2D array:\n",
     "![2-D array](https://www.dyclassroom.com/image/topic/c/2d-array/2d-array.jpg)\n",
@@ -226,8 +226,7 @@
     }
    ],
    "source": [
-    "dataset.variables['tos']\n",
-    ""
+    "dataset.variables['tos']\n"
    ]
   },
   {
