--- a/jupyter-notebooks/netCDF_practice.ipynb
+++ b/jupyter-notebooks/netCDF_practice.ipynb
@@ -34,7 +34,7 @@
    "outputs": [],
    "source": [
     "from netCDF4 import Dataset #import Dataset from the netCDF4 package\n",
-    "dataset = Dataset(r'/Users/katyabbott/Documents/GitHub/BridgeUP-STEM-Oceans-Six/datasets/sea_surface_temp.nc', 'r')  #This opens the dataset as a read-only file (so no changes can be made)\n",
+    "dataset = Dataset('sea_surface_temp.nc', 'r')  #This opens the dataset as a read-only file (so no changes can be made)\n",
     "## The two netCDF extensions used are .nc and .cdf"
    ]
   },
