--- a/jupyter-notebooks/netCDF_practice.ipynb
+++ b/jupyter-notebooks/netCDF_practice.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Nov. 1 | Exploring netCDFs: The earth scientist's favorite file format\n",
+    "# Nov. 1-20 | Exploring netCDFs: The earth scientist's favorite file format\n",
     "![netcdf imnage](http://desktop.arcgis.com/en/arcmap/10.3/manage-data/netcdf/GUID-D872A4C3-749E-4159-A6C0-FB6D3B47C5D8-web.gif)"
    ]
   },
