--- a/jupyter-notebooks/netCDF_practice.ipynb
+++ b/jupyter-notebooks/netCDF_practice.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "# Nov. 1-20 | Exploring netCDFs: The earth scientist's favorite file format\n",
-    "![netcdf imnage](http://desktop.arcgis.com/en/arcmap/10.3/manage-data/netcdf/GUID-D872A4C3-749E-4159-A6C0-FB6D3B47C5D8-web.gif)"
+    "![netcdf image](http://desktop.arcgis.com/en/arcmap/10.3/manage-data/netcdf/GUID-D872A4C3-749E-4159-A6C0-FB6D3B47C5D8-web.gif)"
    ]
   },
   {
@@ -139,7 +139,7 @@
    ],
    "source": [
     "print(dataset.title)\n",
-    "print(dataset.contact)\n",
+    "print(dataset.history)\n",
     "print(dataset.experiment_id)"
    ]
   },
