--- a/jupyter-notebooks/netCDF_practice.ipynb
+++ b/jupyter-notebooks/netCDF_practice.ipynb
@@ -138,8 +138,8 @@
     }
    ],
    "source": [
-    "print(dataset.title)\n",
-    "print(dataset.contact)\n",
+    "print(dataset.realization)\n",
+    "print(dataset.comment)\n",
     "print(dataset.experiment_id)"
    ]
   },
