--- a/labs/lab_12-06-18.md
+++ b/labs/lab_12-06-18.md
@@ -8,4 +8,5 @@
 
 2. Take a look at the numpy arrays corresponding to each dimension variable (there are three!). Try to assign each array to a new, descriptive variable name (like `lat`)
 
-3. 
+3. Try to draw/visualize the three dimensions on a piece of paper. This is your chance to be creative! Think about what the values in each numpy array represent. What is the shape of each numpy array? Is it 1D or 2D? 
+You may work with a partner, but each person should come up with their own drawing.
