--- a/labs/lab_12-11-18.md
+++ b/labs/lab_12-11-18.md
@@ -6,12 +6,19 @@
 ## Tasks
 1. Load your dataset. This command should already be written into your script. 
 
-2. Take a look at the numpy arrays corresponding to each dimension variable (there are three!). Try to assign each array to a new, descriptive variable name (like `lat`). 
-
-Do the same for our data variable.
+2. Take a look at the numpy arrays corresponding to each dimension variable (there are three!). Try to assign each array to a new, descriptive variable name (like `lat`). Do the same for our data variable.
 
 3. We're going to make a pixel plot of our data, using Matplotlib's very simple [`pcolor` function](https://matplotlib.org/api/_as_gen/matplotlib.pyplot.pcolor.html).
+`pcolor` stands for pseudocolor plot. Think of a 2D space, like a grid of `latitude` and `longitude` points. Now every point in this space can have an additional property that can be described by a number, say a temperature or a height. In our case, this property is sea level anomaly. `pcolor` represents that property by a color that is then plotted. There are only three inputs necessary: X (your longitude array), Y (your latitude array) and Z (your sea level anomaly array). 
 
      - First, you'll need to figure out what new library to import. Take a look at [this demo](https://matplotlib.org/examples/pylab_examples/pcolor_demo.html) and see if you can figure out the correct import statement. Go ahead and add it to the top of your script. 
-     - Using these two tutorials, and Google, use the `pcolor` function to plot a day's worth of sea level anomaly as a function of latitude and longitude.
+     - Using [this demo](https://matplotlib.org/examples/pylab_examples/pcolor_demo.html) and [this documentation](https://matplotlib.org/api/_as_gen/matplotlib.pyplot.pcolor.html), use the `pcolor` function to plot a day's worth of sea level anomaly as a function of latitude and longitude. Use Google and StackOverflow if you're having trouble figuring out the syntax. 
+     - If you run into a mismatch with the dimensions: What is the size of our sea level anomaly array? Does it contain more than one day's worth of data? If so, how can you plot data from just a single day? Think back to our lessons on [numpy arrays](https://github.com/amnh/BridgeUP-STEM-Oceans-Six/blob/master/coding_cheat_sheet.md).
+     
+     
+BONUS (if you finish early):
+1. Can you plot sea level anomaly as a function of time? Choose a single value of latitude, and plot SLA over time and longitude. This kind of plot is called a Hovmoller diagram, and it's very useful for earth scientists.
+![Hovmoller](http://esc24.github.io/iris/_images/hovmoller.png)
+(Hint: This is just like plotting SLA from a single day as a function of latitude and longitude -- except that you're plotting SLA from a single line of latitude. What you see is the changes over time along that cross-section.)
 
+2. Change the color scheme of our map! You'll need the [cmap (color map)](https://matplotlib.org/examples/color/colormaps_reference.html) functionality to do this. 
