--- a/labs/lab_12-11-18.md
+++ b/labs/lab_12-11-18.md
@@ -2,6 +2,7 @@
 
 ## Set up
 - Open your netCDF.py script in Atom
+- Navigate to your GitHub repository in Terminal. Add, commit and push any changes you have made. Then pull from upstream. 
 
 ## Tasks
 1. Load your dataset. This command should already be written into your script. 
@@ -15,6 +16,7 @@
      - Using [this demo](https://matplotlib.org/examples/pylab_examples/pcolor_demo.html) and [this documentation](https://matplotlib.org/api/_as_gen/matplotlib.pyplot.pcolor.html), use the `pcolor` function to plot a day's worth of sea level anomaly as a function of latitude and longitude. Use Google and StackOverflow if you're having trouble figuring out the syntax. 
      - If you run into a mismatch with the dimensions: What is the size of our sea level anomaly array? Does it contain more than one day's worth of data? If so, how can you plot data from just a single day? Think back to our lessons on [numpy arrays](https://github.com/amnh/BridgeUP-STEM-Oceans-Six/blob/master/coding_cheat_sheet.md).
      
+## DON'T FORGET TO ADD, COMMIT AND PUSH YOUR CHANGES WITH GIT!
      
 BONUS (if you finish early):
 1. Can you plot sea level anomaly as a function of time? Choose a single value of latitude, and plot SLA over time and longitude. This kind of plot is called a Hovmoller diagram, and it's very useful for earth scientists.
