--- a/labs/lab_12-11-18.md
+++ b/labs/lab_12-11-18.md
@@ -1,22 +1,23 @@
 # Dataset visualization | 12-11-18
 
 ## Set up
+- Open Terminal, and navigate to your GitHub repository in Terminal. [Add, commit and push any changes you have made.](https://github.com/amnh/BridgeUP-STEM-Oceans-Six/blob/master/coding_cheat_sheet.md) Then pull from upstream. 
 - Open your netCDF.py script in Atom
-- Navigate to your GitHub repository in Terminal. Add, commit and push any changes you have made. Then pull from upstream. 
 
 ## Tasks
-1. Load your dataset. This command should already be written into your script. 
+1. Run the command in Atom that load your dataset. 
 
-2. Take a look at the numpy arrays corresponding to each dimension variable (there are three!). Try to assign each array to a new, descriptive variable name (like `lat`). Do the same for our data variable.
+2. Take a look at the numpy arrays corresponding to each dimension variable (there are three!). Assign each array to a new, descriptive variable name (like `lat`). Do the same for our data variable.
 
 3. We're going to make a pixel plot of our data, using Matplotlib's very simple [`pcolor` function](https://matplotlib.org/api/_as_gen/matplotlib.pyplot.pcolor.html).
-`pcolor` stands for pseudocolor plot. Think of a 2D space, like a grid of `latitude` and `longitude` points. Now every point in this space can have an additional property that can be described by a number, say a temperature or a height. In our case, this property is sea level anomaly. `pcolor` represents that property by a color that is then plotted. There are only three inputs necessary: X (your longitude array), Y (your latitude array) and Z (your sea level anomaly array). 
+`pcolor` stands for pseudocolor plot. Think of a 2D space, like a grid of `latitude` and `longitude` points. Now every point in this space can have an additional property that can be described by a number, say a temperature or a height. In our case, this property is sea level anomaly. `pcolor` represents that property by a color that is then plotted. There are only three inputs necessary to create a pcolor plot: X (your longitude array), Y (your latitude array) and Z (your sea level anomaly array). 
 
-     - First, you'll need to figure out what new library to import. Take a look at [this demo](https://matplotlib.org/examples/pylab_examples/pcolor_demo.html) and see if you can figure out the correct import statement. Go ahead and add it to the top of your script. 
-     - Using [this demo](https://matplotlib.org/examples/pylab_examples/pcolor_demo.html) and [this documentation](https://matplotlib.org/api/_as_gen/matplotlib.pyplot.pcolor.html), use the `pcolor` function to plot a day's worth of sea level anomaly as a function of latitude and longitude. Use Google and StackOverflow if you're having trouble figuring out the syntax. 
-     - If you run into a mismatch with the dimensions: What is the size of our sea level anomaly array? Does it contain more than one day's worth of data? If so, how can you plot data from just a single day? Think back to our lessons on [numpy arrays](https://github.com/amnh/BridgeUP-STEM-Oceans-Six/blob/master/coding_cheat_sheet.md).
+     - First, you'll need to figure out what new library to import. Take a look at [this demo](https://matplotlib.org/examples/pylab_examples/pcolor_demo.html) and see if you can figure out the correct import statement. Go ahead and add it to the top of your script, with your other import statements. (Programming tip: We always put import statements at the top of a script, for organizational purposes.)  
+     - Using [this demo](https://matplotlib.org/examples/pylab_examples/pcolor_demo.html) and [this documentation](https://matplotlib.org/api/_as_gen/matplotlib.pyplot.pcolor.html), use the `pcolor` function to plot a single day's worth of sea level anomaly as a function of latitude and longitude. Use Google and StackOverflow if you're having trouble figuring out the syntax. 
+     - If you run into a mismatch with the dimensions: What is the size of our sea level anomaly array? Does it contain more than one day's worth of data? If so, how can you plot data from just a single day? Think back to our lessons on [numpy arrays](https://github.com/amnh/BridgeUP-STEM-Oceans-Six/blob/master/coding_cheat_sheet.md). 
+          - Hint: You can pick any day you want -- you don't have to pick the first day of the dataset.
      
-## DON'T FORGET TO ADD, COMMIT AND PUSH YOUR CHANGES WITH GIT!
+### DON'T FORGET TO ADD, COMMIT AND PUSH YOUR CHANGES WITH GIT!
      
 BONUS (if you finish early):
 1. Can you plot sea level anomaly as a function of time? Choose a single value of latitude, and plot SLA over time and longitude. This kind of plot is called a Hovmoller diagram, and it's very useful for earth scientists.
