--- a/labs/lab_12-11-18.md
+++ b/labs/lab_12-11-18.md
@@ -14,7 +14,7 @@
 
      - First, you'll need to figure out what new library to import. Take a look at [this demo](https://matplotlib.org/examples/pylab_examples/pcolor_demo.html) and see if you can figure out the correct import statement. Go ahead and add it to the top of your script, with your other import statements. (Programming tip: We always put import statements at the top of a script, for organizational purposes.)  
      - Using [this demo](https://matplotlib.org/examples/pylab_examples/pcolor_demo.html) and [this documentation](https://matplotlib.org/api/_as_gen/matplotlib.pyplot.pcolor.html), use the `pcolor` function to plot a single day's worth of sea level anomaly as a function of latitude and longitude. Use Google and StackOverflow if you're having trouble figuring out the syntax. 
-     - If you run into a mismatch with the dimensions: What is the size of our sea level anomaly array? Does it contain more than one day's worth of data? If so, how can you plot data from just a single day? Think back to our lessons on [numpy arrays](https://github.com/amnh/BridgeUP-STEM-Oceans-Six/blob/master/coding_cheat_sheet.md). 
+     - If you run into a mismatch with the dimensions while using pcolor: What is the size of our sea level anomaly array? Does it contain more than one day's worth of data? If so, how can you plot data from just a single day? Think back to our lessons on [numpy arrays](https://github.com/amnh/BridgeUP-STEM-Oceans-Six/blob/master/coding_cheat_sheet.md). 
           - Hint: You can pick any day you want -- you don't have to pick the first day of the dataset.
      
 ### DON'T FORGET TO ADD, COMMIT AND PUSH YOUR CHANGES WITH GIT!
