--- a/labs/lab_12-11-18.md
+++ b/labs/lab_12-11-18.md
@@ -24,4 +24,4 @@ BONUS (if you finish early):
 ![Hovmoller](http://esc24.github.io/iris/_images/hovmoller.png)
 (Hint: This is just like plotting SLA from a single day as a function of latitude and longitude -- except that you're plotting SLA from a single line of latitude. What you see is the changes over time along that cross-section.)
 
-2. Change the color scheme of our map! You'll need the [cmap (color map)](https://matplotlib.org/examples/color/colormaps_reference.html) functionality to do this. 
+2. Change the color scheme of your plot! You'll need the [cmap (color map)](https://matplotlib.org/examples/color/colormaps_reference.html) functionality to do this. 
