--- a/labs/lab_12-11-18.md
+++ b/labs/lab_12-11-18.md
@@ -1,5 +1,7 @@
 # Dataset visualization | 12-11-18
 
+![wooh image](https://octave.sourceforge.io/octave/function/images/pcolor_201.png)
+
 ## Set up
 - Open Terminal, and navigate to your GitHub repository in Terminal. [Add, commit and push any changes you have made.](https://github.com/amnh/BridgeUP-STEM-Oceans-Six/blob/master/coding_cheat_sheet.md) Then pull from upstream. 
 - Open your netCDF.py script in Atom
