--- a/labs/lab_12-11-18.md
+++ b/labs/lab_12-11-18.md
@@ -22,8 +22,9 @@
 ### DON'T FORGET TO ADD, COMMIT AND PUSH YOUR CHANGES WITH GIT!
      
 BONUS (if you finish early):
-1. Can you plot sea level anomaly as a function of time? Choose a single value of latitude, and plot SLA over time and longitude. This kind of plot is called a Hovmoller diagram, and it's very useful for earth scientists.
-![Hovmoller](http://esc24.github.io/iris/_images/hovmoller.png)
-(Hint: This is just like plotting SLA from a single day as a function of latitude and longitude -- except that you're plotting SLA from a single line of latitude. What you see is the changes over time along that cross-section.)
+1. Add [x-axis and y-axis labels](https://matplotlib.org/users/text_intro.html) to your plot. You should also add a title.
+2. Add a colorbar to your map, using these [demos](https://matplotlib.org/2.1.0/gallery/axes_grid1/demo_colorbar_with_inset_locator.html#sphx-glr-gallery-axes-grid1-demo-colorbar-with-inset-locator-py) and [documentation](https://matplotlib.org/2.1.0/api/_as_gen/matplotlib.pyplot.colorbar.html). This [tutorial](https://jakevdp.github.io/PythonDataScienceHandbook/04.07-customizing-colorbars.html) may also be helpful. 
+This is a good example of a well-described map, with labels and a color bar.
+![https://scitools.org.uk/iris/docs/v1.9.0/html/_images/hovmoller.png](https://scitools.org.uk/iris/docs/v1.9.0/html/_images/hovmoller.png)
 
-2. Change the color scheme of your plot! You'll need the [cmap (color map)](https://matplotlib.org/examples/color/colormaps_reference.html) functionality to do this. 
+3. Change the color scheme of your plot! You'll need the [cmap (color map)](https://matplotlib.org/examples/color/colormaps_reference.html) functionality to do this. 
