Updating README and labs

--- a/labs/lab_01-08-19.md
+++ b/labs/lab_01-08-19.md
@@ -1,3 +1,35 @@
-# Hovmoller diagrams | 01-08-19
+# Hovmöller diagrams | 01-08-19
 
 ![image](https://scitools.org.uk/iris/docs/v1.9.0/html/_images/hovmoller.png)
+
+Hovmöller diagrams provide a different way to display changes in data over time. 
+
+They are created by plotting longitude (or latitude) vs. time, rather than longitude vs. latitude.
+
+Scientists begin by creating a **transect** along a line of longitude (this line spans many longitude values but only one latitude value). An example of this transect can be found below.
+
+![image](https://raw.githubusercontent.com/amnh/BridgeUP-STEM-Oceans-Six/master/photos/sla_Bermuda_Hovmoller_9149.png?token=AmUbDkH26QVm5306PtfFh3HbXKHhnmUpks5cPjADwA%3D%3D)
+
+For the first date in the dataset, they take the values that occur along this **transect** and plot them at the bottom of the figure. Then, they look at the next day's data, take the new values that occur along the transect, and plot them on top of the original transect line's data. They continue this process, adding each new day's worth of data **on top** of the older data, building up until they have a plot with longitude on the x-axis and time on the y-axis that represents a **single** value of latitude. 
+
+This process can also be repeated using a single line of latitude, rather than longitude, to represent how sea level anomaly varies with longitude over time. Usually, scientists plot time on the x-axis and longitude on the y-axis in this case, because latitude represents N-S. 
+
+### Objectives
+1. Save the script you have been working on with a new name. It should include "Hovmoller" and your initials in the name, to be descriptive. Add a comment to the top of your script that explains what it will do (that is, create Hovmöller diagrams from our data).
+
+2. Using pair programming, edit your script to plot SLA from longitude and time, rather than longitude and latitude. For simplicity, you'll create a Hovmöller diagram from the latitude value 27.125 degrees.
+Hint: You will need to add one new line of code and change a single line of your code to create this diagram. Think about what inputs the pcolor function requires. 
+
+## Challenges (if you finish early)
+1. Can you create a Hovmöller diagram that plots **latitude** vs. time? You can find an example [here](https://wci.earth2observe.eu/assets/images/hovmoller.png). Choose the longitude value 290.125, for simplicity. 
+(Note: You may have to transpose the SLA anomaly matrix to plot time on the x axis and latitude on the y axis. [See this documentation](https://docs.scipy.org/doc/numpy-1.14.0/reference/generated/numpy.matrix.transpose.html))
+
+2. Your plots are probably displaying the time axis with units of days since Jan 1., 1950, which is difficult to decipher. Can you transform the time variable into a date-time variable? You'll be using the package **datetime**, which can represent dates and times in Python.
+
+  Hints: 
+  1. Look at the documentation for [datetime.date](https://www.w3schools.com/python/python_datetime.asp). You'll want to create a variable, day1, that holds the date Jan 1., 1950. 
+  2. Read about the [datetime.timedelta](https://www.journaldev.com/23334/python-timedelta) function. This allows us to represent intervals of time (i.e. 10 days, etc.)
+  3. We want to add the original date (Jan. 1, 1950) to the number of days in our time variable, to get the actual dates of the observation. Can you write a for loop that does this?
+
+
+
