--- a/labs/lab_01_15_19.md
+++ b/labs/lab_01_15_19.md
@@ -4,9 +4,9 @@
 
 We will use for loops to save plots of our data at every single date in our time variable. 
 
-#### Objectives
+## Objectives
 
-#### 1. Python has a cool tool for creating strings with variable values. 
+### 1. Python has a cool tool for creating strings with variable values. 
 For example, if I want to print out a string that contains someone's name and age, I can write `"My name is {} and I am {} years old".format('Katy', 24)`. The great part about this is that we can change the input to be anything, without having to rewrite the entire string or add strings together.
 
   Read more about the [str.format function here](https://www.geeksforgeeks.org/python-format-function/). 
@@ -14,16 +14,16 @@ For example, if I want to print out a string that contains someone's name and ag
   With your partner, practice writing a string that takes in (a) one variable input, (b) two variables inputs, (c) three variable inputs, and (d) two variable inputs that have an order  (see Code #4 in the link). You can make your string anything you want. 
   If you're not feeling creative, just write a string that prints out your favorite (or least favorite) subject in school.  Then, write a string that prints out your two favorite/least favorite subjects, and then three favorite/least favorite subjects. 
   
-#### 2. Write a for loop that loops over the names of your fellow interns and prints out "_______ is a intern in Ocean's Six" (replacing the ____ with an intern's name).
+### 2. Write a for loop that loops over the names of your fellow interns and prints out "_______ is a intern in Ocean's Six" (replacing the ____ with an intern's name).
 
-#### 3. Now, let's apply what we have learned about str.format and for loops.
+### 3. Now, let's apply what we have learned about str.format and for loops.
 
   Our goal is to write a script that plots and saves sea level anomaly for each date in our dataset.
   
-  ##### **a.** Open your Python script that plots sea level anomaly for a single day as a function of latitude and longitude. 
+  ### **a.** Open your Python script that plots sea level anomaly for a single day as a function of latitude and longitude. 
   Resave it with a new title that has the words "loop" and "SLA" and your initials in it.
   
-  ##### **b.** With your partner, let's write  [pseudocode](https://sites.google.com/a/ismanila.org/oliverab_cp/python/pseudocode) for the for loop you want to create. 
+  ### **b.** With your partner, let's write  [pseudocode](https://sites.google.com/a/ismanila.org/oliverab_cp/python/pseudocode) for the for loop you want to create. 
   
   First, what value are you looping over (i.e., what value should change with every iteration)? 
   
@@ -31,28 +31,28 @@ For example, if I want to print out a string that contains someone's name and ag
   
   Now, can you put those two steps together and write it down as pseudocode? Don't worry about using correct Python syntax. You should **Slack me your pseudocode once you and your partner are done.**
   
-  ##### **c.** Now, implement that pseudocode you just wrote as Python code. 
+  ### **c.** Now, implement that pseudocode you just wrote as Python code. 
   You may be able to use [the range function](https://www.pythoncentral.io/pythons-range-function-explained/), which we discussed at the beginning of the year.
   
-  ##### **d.** Run your code for a small subset of our date range. 
+  ### **d.** Run your code for a small subset of our date range. 
   This is a good practice in debugging, because it allows us to test just a few iterations of the for loop. What happens? Try to find the saved plots in Finder or Terminal. 
   
-  ##### **e.** How can you save each plot with a unique file name? 
+  ### **e.** How can you save each plot with a unique file name? 
   (Hint: Remember str.format!) <br/>
   After making this change, try running your code  (again, with only a small subset of our date range)
   
-  ##### **f.** Let's make the titles of our plots more descriptive.
+  ### **f.** Let's make the titles of our plots more descriptive.
   Time to bring actual dates in. Find the code you wrote to convert the time variable in our dataset to a list of dates (mm/dd/yyyy). Copy it into your script. 
   
   Now, write a sample plot title that includes the date of observation, using str.format. How are you selecting the appropriate date to use?
   
   Incorporate this varying plot title back into your for loop. 
   
-  ##### **g.** Bonus: Can you use str.format and your dates variable to include the observation date in the plot's file name? 
+  ### **g.** Bonus: Can you use str.format and your dates variable to include the observation date in the plot's file name? 
   
   i.e., SLA_Bermuda_1993-12-12.plotting
   
-  ##### **h**. Extra bonus: Converting dates back to strings.
+  ### **h**. Extra bonus: Converting dates back to strings.
   Python has two features: strptime and strftime, that allow us to convert from these `datetime` objects to strings and vice versa. Using [strftime](https://www.programiz.com/python-programming/datetime/strftime) on a datetime object allows us to print it out in any string format we want. For example, we can take the datetime object `datetime.date(2019,1,15)` and use `.strftime` on it to return just the year (2019). We can also return the date like this, `1/15/2019`, or this, `Jan. 15, 2019` or any other format we choose. 
   
   **Practice**: Create a datetime object for Jan. 15, 2019, and use strftime to write code that returns `1/15/2019`, `Jan. 15, 2019` and just the year `2019`. Check out [strftime](https://www.programiz.com/python-programming/datetime/strftime) and its [references](http://strftime.org/). 
