--- a/labs/lab_01_15_19.md
+++ b/labs/lab_01_15_19.md
@@ -12,7 +12,11 @@ For example, if I want to print out a string that contains someone's name and ag
 
 ### 1. Read more about the [str.format function here](https://www.geeksforgeeks.org/python-format-function/). 
   
-  With your partner, practice writing a string that takes in (a) one variable input, (b) two variables inputs, (c) three variable inputs, and (d) two variable inputs that have an order  (see Code #4 in the link). You can make your string anything you want. 
+  With your partner, practice writing a string that takes in 
+  (a) one variable input, 
+  (b) two variables inputs, 
+  (c) three variable inputs, and 
+  (d) two variable inputs that have an order  (see Code #4 in the link). You can make your string anything you want. 
   If you're not feeling creative, just write a string that prints out your favorite (or least favorite) subject in school.  Then, write a string that prints out your two favorite/least favorite subjects, and then three favorite/least favorite subjects. 
   
 ### 2. Write a for loop that loops over the names of your fellow interns and prints out "_______ is a intern in Ocean's Six" (replacing the ____ with an intern's name).
