--- a/labs/lab_01_29_19.md
+++ b/labs/lab_01_29_19.md
@@ -32,7 +32,7 @@
     
   ## **d.** If you're happy with your function, move onto the next step: Writing a for loop that plots and saves your data for each day in the dataset.
   
-  When you write your for loop, test it on just a small subset of your dataset. (For example, if you're using the `range` function to loop through the numbers 1 through 100, sometimes you may want to test on the numbers 1 through 5, first. This is a common debugging strategy to check that the for loop is giving the correct output without wasting computing power.)
+ Make sure you include the function within the body of your for loop! One tip: When you write your for loop, test it on just a small subset of your dataset. (For example, if you're using the `range` function to loop through the numbers 1 through 100, sometimes you may want to test on the numbers 1 through 5, first. This is a common debugging strategy to check that the for loop is giving the correct output without wasting computing power.)
   
   ## **e.** Challenging: After you've run your test for loop, check your output! Do you have separate files for each day? If not, talk with a partner about what's happening.
   
