--- a/labs/lab-02-14-19.md
+++ b/labs/lab-02-14-19.md
@@ -7,7 +7,7 @@
 
 - [x] Plot sea level anomaly from our dataset with the pcolor function
 - [x] Write a function that plots SLA for any given day
-- [x] Convert our dates variable from "`x` days since Jan. 1, 1950' to a mm/dd/yyyy format (i.e. 01-01-1993)
+- [x] Convert our dates variable from `x days since Jan. 1, 1950` to a mm/dd/yyyy format (i.e. 01-01-1993)
 - [x] Use str.format to change the plot title in our function depending on the day argument
 - [ ] Use str.format and our converted dates variable to make the plot date aware (i.e. printing `SLA on 1/1/1993`, rather than `SLA on day 1`)
 - [ ] Save the output of our plot within our function
